WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
97917
[BlackBerry] Exiting fullscreen does not set the correct scroll position
https://bugs.webkit.org/show_bug.cgi?id=97917
Summary
[BlackBerry] Exiting fullscreen does not set the correct scroll position
Antonio Gomes
Reported
2012-09-28 08:28:01 PDT
SSIA
Attachments
patch
(6.79 KB, patch)
2012-09-28 08:32 PDT
,
Antonio Gomes
yong.li.webkit
: review+
Details
Formatted Diff
Diff
patch
(2.16 KB, patch)
2012-10-03 16:25 PDT
,
Antonio Gomes
yong.li.webkit
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antonio Gomes
Comment 1
2012-09-28 08:32:29 PDT
Created
attachment 166257
[details]
patch
Antonio Gomes
Comment 2
2012-09-28 09:38:59 PDT
https://trac.webkit.org/changeset/129909
Antonio Gomes
Comment 3
2012-10-03 16:19:33 PDT
One more bit was left out
Antonio Gomes
Comment 4
2012-10-03 16:25:47 PDT
Created
attachment 166987
[details]
patch
Antonio Gomes
Comment 5
2012-10-04 08:32:10 PDT
https://trac.webkit.org/changeset/130392
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug